<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="600dp"
    android:background="@color/grey800">


    <Button
        android:id="@+id/activity_level_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_level_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_title"
        android:textColor="@color/grey100"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/activity_level_textview_posting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_posting1"
        android:textColor="@color/grey300"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_level_textview_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/level_textview_level"
        android:textColor="@color/grey100"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_posting1"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/activity_level_textview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_time"
        android:textColor="@color/grey300"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_level"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/activity_level_textview_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_history"
        android:textColor="@color/grey100"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_time"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/activity_level_textview_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_range"
        android:textColor="@color/grey300"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/activity_level_textview_history"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_time"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/activity_level_textview_posting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_textview_posting2"
        android:textColor="@color/grey300"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_history"
        app:layout_constraintVertical_bias="0.011" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_level_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_level_textview_posting2" />


</androidx.constraintlayout.widget.ConstraintLayout>