<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey900">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_textview_title"
            android:textColor="@color/grey100"
            android:textStyle="bold"
            android:textSize="25dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_toolbar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/activity_main_textview_connectingNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/main_textview_connectingNum"
            android:textAlignment="center"
            android:textColor="@color/grey800"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_main_textview_waitingNum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_main_textview_waitingNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/main_textview_watingNum"
            android:textAlignment="center"
            android:textColor="@color/grey800"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/activity_main_textview_connectingNum"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/activity_main_textview_posting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_posting"
        android:textAlignment="center"
        android:textColor="@color/grey200"
        android:textSize="15dp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

    <Button
        android:id="@+id/activity_main_button_filter"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/main_button_filter"
        android:padding="40dp"
        android:text="@string/main_button_filter"
        android:textSize="40dp"
        android:textColor="@color/grey200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_textview_posting"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/activity_main_button_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/main_button_message"
        android:padding="30dp"
        android:text="@string/main_button_message"
        android:textSize="20dp"
        android:textColor="@color/grey100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_main_button_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_button_filter" />

    <Button
        android:id="@+id/activity_main_button_memory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/main_button_message"
        android:padding="30dp"
        android:text="@string/main_button_memory"
        android:textSize="20dp"
        android:textColor="@color/grey100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_main_button_message"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_button_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>